[tool.poetry]
name = "walnut"
version = "0.1.1"
description = "Tiny library to create daily tooling"
authors = ["Esteban del Boca <esteban.delboca@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"
chevron = "^0.14.0"
pendulum = "^2.1.2"
Jinja2 = "^3.1.2"
jmespath = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
kubernetes = "^23.6.0"
mysql-connector = "^2.2.9"
PyMySQL = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
