[tool.poetry]
name = "walnut"
version = "0.15.4"
description = "Tiny library to create daily tooling"
authors = ["Esteban del Boca <esteban.delboca@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7, <3.11"
click = "^8.1.2"
chevron = "^0.14.0"
pendulum = "^2.1.2"
Jinja2 = "^3.1.2"
jmespath = "^1.0.1"
requests = "^2.28.1"
bs4 = "^0.0.1"
soup2dict = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
kubernetes = "^23.6.0"
mysql-connector = "^2.2.9"
PyMySQL = "^1.0.2"
responses = "^0.21.0"
psycopg2 = "^2.9.3"
google-cloud-secret-manager = "^2.12.2"
google-cloud-bigquery = "^3.3.5"
google-cloud-storage = "^2.5.0"

[tool.black]
line-length = 99
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = "src"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
